@@ -3,14 +3,14 @@
 # FileLog definition: 
 #   define FileLog fhtlog1 fht1:.*(temp|actuator).* /var/log/fht1-%Y-%U.log 
 #
-set terminal png
+set terminal png size 1024,240 crop
 set output '<OUT>.png'
 set xdata time
 set timefmt "%Y-%m-%d_%H:%M:%S"
 set xlabel " "
 set ytics nomirror
 set y2tics
-set title '<IN>'
+set title '<TL>'
 set grid
 
 set ylabel "Temperature (Celsius)"
